feat: unified build-release script with JLink + extra resource copy + SketchConfig NPE fix
- Add scripts/build-release.ps1: unified packaging script combining
  engine compile, PPAK pack, Processing CLI export, JLink JRE slimming
- Auto-detect and copy extra resource folders (music, sounds, textures, etc.)
  from sketch root to output directory (Processing CLI only copies data/)
- Fix NullPointerException in SketchConfig.getDefaultSketchName() when
  applet is null (occurred in exported EXE settings() lifecycle)
- Verify TowerDefenseMin2 export: 87.44 MB total (EXE 70KB + JRE 42.85MB)
- Update docs/Processing_Export_JLink_Guide.md with new script usage